fix searches, dates
