# api.yml
@@ -76,7 +76,7 @@ paths:
   #       "500":
   #         $ref: '#/components/schemas/500InternalServerError'
   #     x-openapi-router-controller: swagger_server.controllers.games_search
-  /gamesLibrary/search/{genres}:
+  /gamesLibrary/search/:
     get:
       summary: Get a single game
       description: Returns the record of a game in the library
@@ -100,31 +100,29 @@ paths:
         "500":
           $ref: '#/components/schemas/500InternalServerError'
       x-openapi-router-controller: swagger_server.controllers.games_search
-  # /gamesLibrary/search/{date}:
-  #   get:
-  #     summary: Get a single game
-  #     description: Returns the record of a game in the library
-  #     parameters:
-  #       - $ref: '#/components/parameters/dateParam'
-  #     operationId: search_game_date
-  #     responses:
-  #       "200":
-  #         description: Success
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: array
-  #               items:
-  #                 $ref: '#/components/schemas/game'
-  #               x-content-type: application/json
-  #       "400":
-  #         $ref: '#/components/schemas/400BadRequestError'
-  #       "404":
-  #         $ref: '#/components/schemas/404NotFoundError'
-  #       "500":
-  #         $ref: '#/components/schemas/500InternalServerError'
-  #     x-openapi-router-controller: swagger_server.controllers.games_search
-  # /gamesLibrary/search/{dateRange}:
+    get:
+      summary: Get a single game
+      description: Returns the record of a game in the library
+      parameters:
+        - $ref: '#/components/parameters/yearParam'
+      operationId: search_game_year
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/game'
+                x-content-type: application/json
+        "400":
+          $ref: '#/components/schemas/400BadRequestError'
+        "404":
+          $ref: '#/components/schemas/404NotFoundError'
+        "500":
+          $ref: '#/components/schemas/500InternalServerError'
+      x-openapi-router-controller: swagger_server.controllers.games_search
   #   get:
   #     summary: Get a single game
   #     description: Returns the record of a game in the library
@@ -149,7 +147,6 @@ paths:
   #       "500":
   #         $ref: '#/components/schemas/500InternalServerError'
   #     x-openapi-router-controller: swagger_server.controllers.games_search
-  # /gamesLibrary/search/{publisher}:
   #   get:
   #     summary: Get a single game
   #     description: Returns the record of a game in the library
@@ -279,21 +276,21 @@ components:
     genresParam:
       name: genres
       description: The genres of a game
-      in: path
-      required: true
+      in: query
+      required: false
       schema:
         type: array
         items:
           type: string
-      example: action
-    dateParam:
-      name: date
+      example: Action
+    yearParam:
+      name: year
       description: The date a game was published
-      in: path
-      required: true
+      in: query
+      required: false
       schema:
         type: string
-      example: 1-1-1970
+      example: '1970'
     dateRangeStartParam:
       name: dateRangeStart
       description: The date range a game was published
